<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/number_textview"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <ImageView
        android:id="@+id/clickImageView"
        android:layout_width="176dp"
        android:layout_height="246dp"
        android:contentDescription="@string/coin_image_content_description"
        android:onClick="addOnClick"
        android:src="@drawable/coin_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberTextView"
        app:layout_constraintVertical_bias="0.455" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/info_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/info_bar_child"
            android:background="@drawable/child_info_bar">

            <ImageView

                android:id="@+id/touchIconImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/money_value_per_click_content_description"
                app:srcCompat="@drawable/bucks_icon" />

            <TextView
                android:id="@+id/touchValueTextView"
                style="@style/textview_style"
                android:text="value"

                />
        </LinearLayout>


        <LinearLayout
            style="@style/info_bar_child"
            android:background="@drawable/child_info_bar">

            <ImageView
                android:id="@+id/autoTouchImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/auto_click_content_description"
                app:srcCompat="@drawable/robomoney" />

            <TextView
                android:id="@+id/autoTouchValueTextView"
                style="@style/textview_style"
                android:text="value" />
        </LinearLayout>

        <LinearLayout
            style="@style/info_bar_child"
            android:background="@drawable/child_info_bar">

            <ImageView
                android:id="@+id/coinRateImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/money_per_second_content_description"
                app:srcCompat="@drawable/clock_money_2" />

            <TextView
                android:id="@+id/coinRateValueTextView"
                style="@style/textview_style"
                android:text="value" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/shopDividerHorizontalUpper"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#A18233"
        app:layout_constraintBottom_toTopOf="@+id/shopDividerHorizontalMiddle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/shopDividerHorizontalMiddle"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#DFAD3C"
        app:layout_constraintBottom_toTopOf="@+id/shopDividerHorizontalDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/shopDividerHorizontalDown"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#A18233"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnknownId" />

    <ImageView
        android:id="@+id/shopImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="shopImageOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117"
        app:srcCompat="@drawable/money_bag_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>